--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.1.2",
     "rss-parser": "^3.13.0",
     "swr": "^2.3.6"
   },
