--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@types/echarts": "^4.9.22",
     "axios": "^1.11.0",
     "bili-api": "^1.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "node-cron": "^4.2.1",
