--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:ai": "node scripts/test-ai-summary.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -24,8 +25,12 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@types/bcryptjs": "^2.4.6",
     "@types/echarts": "^4.9.22",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "bili-api": "^1.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,7 +38,9 @@
     "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
+    "next-auth": "^4.24.11",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
