--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/echarts": "^4.9.22",
     "@upstash/ratelimit": "^2.0.6",
