--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@types/ali-oss": "^6.16.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/echarts": "^4.9.22",
+    "@uiw/react-md-editor": "^4.0.8",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
+    "ali-oss": "^6.23.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "bili-api": "^1.10.1",
@@ -45,7 +48,9 @@
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
+    "remark-gfm": "^4.0.1",
     "rss-parser": "^3.13.0",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
