--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "remark-gfm": "^4.0.1",
     "rss-parser": "^3.13.0",
     "swr": "^2.3.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
