--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "db:push": "node scripts/wake-db.mjs && prisma db push",
     "db:migrate": "node scripts/wake-db.mjs && prisma migrate deploy",
     "db:migrate:create": "node scripts/create-migration.mjs",
-    "db:studio": "node scripts/wake-db.mjs && prisma studio"
+    "db:studio": "node scripts/wake-db.mjs && prisma studio",
+    "ensure-demo": "node scripts/ensure-demo-user.mjs"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -32,6 +33,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/ali-oss": "^6.16.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/echarts": "^4.9.22",
