--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "@types/ali-oss": "^6.16.11",
     "@types/bcryptjs": "^2.4.6",
+    "@types/dagre": "^0.7.53",
     "@types/echarts": "^4.9.22",
     "@uiw/react-md-editor": "^4.0.8",
     "@upstash/ratelimit": "^2.0.6",
@@ -48,6 +49,7 @@
     "bili-api": "^1.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dagre": "^0.8.5",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.542.0",
@@ -58,7 +60,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4",
     "recharts": "^3.1.2",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "rss-parser": "^3.13.0",
     "swr": "^2.3.6",
