--- a/.github/workflows/reddit-scraper.yml
+++ b/.github/workflows/reddit-scraper.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   scrape-reddit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 允许推送代码
     
     steps:
       - name: 检出代码
