--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@tanstack/react-virtual": "^3.13.12",
     "@tiptap/extension-image": "^3.6.5",
     "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/extension-task-item": "^3.6.6",
+    "@tiptap/extension-task-list": "^3.6.6",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "@types/ali-oss": "^6.16.11",
@@ -65,6 +67,7 @@
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
     "recharts": "^3.1.2",
+    "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "rss-parser": "^3.13.0",
