--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tiptap/extension-placeholder": "^3.6.5",
     "@tiptap/extension-task-item": "^3.6.6",
     "@tiptap/extension-task-list": "^3.6.6",
+    "@tiptap/extension-typography": "^3.7.0",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "@types/ali-oss": "^6.16.11",
