淇TypeScript缂栬瘧閿欒锛屽畬鎴怤ext.js鏋勫缓浼樺寲
- 淇webread reader椤甸潰鐨凾ypeScript绫诲瀷閿欒
- 鏇存柊API璺敱鍙傛暟绫诲瀷浠ュ吋瀹筃ext.js 15
- 淇epub.js搴撶殑绫诲瀷鍏煎鎬ч棶棰?- 浼樺寲閿欒澶勭悊鏈哄埗
- 瀹屾垚鐢熶骇鐜鏋勫缓

--- a/.github/workflows/reddit-comments-scraper.yml
+++ b/.github/workflows/reddit-comments-scraper.yml
@@ -1,9 +1,9 @@
 name: Reddit 评论采集器
 
 on:
-  # 每天UTC 02:00和14:00运行 (对应北京时间10:00和22:00)
+  # 每天UTC 18:00运行 (对应北京时间凌晨02:00)
   schedule:
-    - cron: '0 2,14 * * *'
+    - cron: '0 18 * * *'
   
   # 允许手动触发
   workflow_dispatch:
@@ -66,6 +66,13 @@ jobs:
         else
           echo "❌ Reddit 评论采集失败，请检查日志"
         fi
+
+
+
+
+
+
+
 
 
 
