--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@uiw/react-md-editor": "^4.0.8",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
+    "@vercel/blob": "^2.0.0",
     "ali-oss": "^6.23.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
@@ -58,6 +59,7 @@
     "dagre": "^0.8.5",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "epubjs": "^0.3.93",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
@@ -65,6 +67,7 @@
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-epub-viewer": "^0.2.0",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
     "recharts": "^3.1.2",
