--- a/linuxdo-scraper/requirements.txt
+++ b/linuxdo-scraper/requirements.txt
@@ -4,6 +4,7 @@ playwright-stealth==1.0.6
 requests==2.32.5
 python-dotenv==1.1.1
 asyncpg==0.29.0
+google-generativeai==0.5.4
 
 # Data processing
 beautifulsoup4==4.12.3
