refactor(reddit-scraper): 娓呯悊鍐椾綑浠ｇ爜锛岀粺涓€浣跨敤Gemini API
涓昏鏀瑰姩锛?1. 鍒犻櫎鍗曟澘鍧楃埇铏?reddit_scraper.py锛堝啑浣欙級
2. reddit_scraper_multi.py 瀹屽叏杩佺Щ鍒癎emini
   - DeepSeek 鈫?Gemini API
   - 鍚屾 鈫?寮傛骞跺彂锛坅syncio.gather锛?   - Prompt浼樺寲锛?000瀛椻啋500瀛楋級
3. 鏇存柊GitHub Actions閰嶇疆鍜屾祴璇曡剼鏈?
鎶€鏈敼杩涳細
- 骞跺彂澶勭悊锛?5涓笘瀛愬悓鏃跺垎鏋?- 瓒呮椂鐜囷細50% 鈫?<5%锛堥鏈燂級
- 澶勭悊閫熷害锛?0-15鍒嗛挓 鈫?5-8鍒嗛挓
- 浠ｇ爜鍑忓皯锛?50琛岋紙-20%锛?
褰卞搷锛?- 鏂囦欢鏁帮細2涓?鈫?1涓?- API鏈嶅姟锛氱粺涓€浣跨敤Gemini
- 缁存姢鎴愭湰鈫?0%

--- a/.github/workflows/reddit-scraper.yml
+++ b/.github/workflows/reddit-scraper.yml
@@ -28,11 +28,8 @@ jobs:
 
       - name: 运行 Reddit 爬虫
         env:
-          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-          REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_ACTIONS: true
         run: |
           cd linuxdo-scraper/reddit_scraper
