feat: 鍒囨崲鍒?DeepSeek API + WebRead IndexedDB 缂撳瓨鍔熻兘
- Reddit 鐖櫕锛氫粠 Gemini 鍒囨崲鍒?DeepSeek API
  - 鏇存柊 reddit_scraper_multi.py锛氫娇鐢?DeepSeek REST API
  - 鏀寔璇勮鑾峰彇鍜岃缁嗗垎鏋愶紙鍖呭惈绀惧尯璁ㄨ锛?  - 鏂板 test-deepseek-api.py 娴嬭瘯鑴氭湰
  - 鏇存柊 GitHub Actions 閰嶇疆锛欴EEPSEEK_API_KEY

- WebRead 鐢靛瓙涔︾紦瀛橈細
  - 瀹炵幇 IndexedDB 缂撳瓨鏈哄埗锛坙ib/ebook-cache.ts锛?  - 鏂板缂撳瓨绠＄悊 UI锛圕acheManagerModal.tsx锛?  - 淇绀轰緥涔︾睄鎸佷箙鍖栭棶棰?  - 淇闃呰鍣ㄧ炕椤甸敊璇拰甯冨眬婧㈠嚭闂
  - 鏂板 demo-epub-generator.ts 鐢ㄤ簬鐢熸垚娴嬭瘯涔︾睄

- 鍏朵粬浼樺寲锛?  - 浼樺寲 LazyImage/LazyNextImage 缁勪欢
  - 浼樺寲 NestedTimerZone 缁勪欢

--- a/.github/workflows/reddit-scraper.yml
+++ b/.github/workflows/reddit-scraper.yml
@@ -29,7 +29,7 @@ jobs:
       - name: 运行 Reddit 爬虫
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
           GITHUB_ACTIONS: true
         run: |
           cd linuxdo-scraper/reddit_scraper
