--- a/.github/workflows/reddit-scraper.yml
+++ b/.github/workflows/reddit-scraper.yml
@@ -2,8 +2,8 @@ name: Reddit 爬虫定时任务
 
 on:
   schedule:
-    # 每天 UTC 00:00 运行（北京时间 08:00）
-    - cron: '0 0 * * *'
+    # 每天 UTC 00:30 运行（北京时间 08:30）- 评论采集后30分钟运行
+    - cron: '30 0 * * *'
   workflow_dispatch: # 允许手动触发
 
 jobs:
