feat: add heybox scraper and tiptap extensions, update timer and notes features

--- a/linuxdo-scraper/env.template
+++ b/linuxdo-scraper/env.template
@@ -32,6 +32,24 @@ POST_COUNT_LIMIT=30
 # 浏览器模式（true=无头，false=有界面）
 HEADLESS=true
 
+# =============================================================================
+# 小黑盒爬虫配置
+# =============================================================================
+# 小黑盒Token ID（必填）
+# 获取方式：
+#  1. 浏览器登录 https://www.xiaoheihe.cn
+#  2. 按F12打开开发者工具 → Network标签
+#  3. 刷新页面，找到任意请求
+#  4. 查看Request Headers中的 x-xhh-tokenid
+#  5. 复制完整值到下方
+HEYBOX_TOKEN_ID=your_token_id_here
+
+# 爬取帖子数量（默认20）
+HEYBOX_POST_LIMIT=20
+
+# 评论数量限制（默认50）
+HEYBOX_COMMENT_LIMIT=50
+
 
 
 
