feat(heybox): Optimize comment limit to 10 (configurable) v2.1.2

--- a/linuxdo-scraper/env.template
+++ b/linuxdo-scraper/env.template
@@ -47,8 +47,9 @@ HEYBOX_TOKEN_ID=your_token_id_here
 # 爬取帖子数量（默认20）
 HEYBOX_POST_LIMIT=20
 
-# 评论数量限制（默认50）
-HEYBOX_COMMENT_LIMIT=50
+# 评论数量限制（默认10，推荐5-20，最多50）
+# 注意：这是抓取页面已加载评论的数量限制，不会爬取全部评论
+HEYBOX_COMMENT_LIMIT=10
 
 
 
