--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node node_modules/next/dist/bin/next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -82,15 +82,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/dagre": "^0.7.53",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19",
     "prisma": "^6.16.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
