--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node node_modules/next/dist/bin/next dev",
-    "build": "prisma generate && prisma migrate deploy && next build",
+    "build": "prisma generate && node scripts/resolve-failed-migration.mjs && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "cron": "node scripts/daily-summary-cron.js",
