--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
     "@vercel/blob": "^2.0.0",
+    "ai": "^5.0.103",
     "ali-oss": "^6.23.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
@@ -66,6 +67,7 @@
     "next-auth": "^4.24.11",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-epub-viewer": "^0.2.0",
@@ -86,10 +88,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
     "prisma": "^6.16.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
