--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "setup-demo": "node scripts/ensure-demo-user.mjs && node scripts/seed-demo-data.mjs"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.74",
+    "@ai-sdk/react": "^2.0.104",
     "@auth/prisma-adapter": "^2.10.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
