--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node node_modules/next/dist/bin/next dev",
-    "build": "node scripts/wake-db.mjs && node node_modules/prisma/build/index.js generate && node scripts/resolve-failed-migration.mjs && node node_modules/prisma/build/index.js migrate deploy && node node_modules/next/dist/bin/next build",
+    "dev": "node scripts/start-dev.mjs",
+    "build": "node node_modules/prisma/build/index.js generate && node scripts/wake-db.mjs && node scripts/resolve-failed-migration.mjs && node node_modules/prisma/build/index.js migrate deploy && node node_modules/next/dist/bin/next build",
     "start": "next start",
     "lint": "next lint",
     "cron": "node scripts/daily-summary-cron.js",
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.57.0",
     "@types/dagre": "^0.7.53",
     "@types/node": "^20",
     "@types/react": "^19",
