--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "node scripts/start-dev.mjs",
-    "build": "node node_modules/prisma/build/index.js generate && node scripts/wake-db.mjs && node node_modules/next/dist/bin/next build",
+    "build": "node node_modules/next/dist/bin/next build",
     "start": "next start",
     "lint": "next lint",
     "cron": "node scripts/daily-summary-cron.js",
@@ -47,6 +47,8 @@
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
     "@tanstack/react-virtual": "^3.13.12",
+    "@tiptap/core": "^3.7.0",
+    "@tiptap/pm": "^3.13.0",
     "@tiptap/extension-image": "^3.7.0",
     "@tiptap/extension-placeholder": "^3.6.5",
     "@tiptap/extension-task-item": "^3.6.6",
@@ -54,6 +56,7 @@
     "@tiptap/extension-typography": "^3.7.0",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
+    "prosemirror-state": "^1.4.3",
     "@types/ali-oss": "^6.16.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/echarts": "^4.9.22",
@@ -91,7 +94,8 @@
     "rss-parser": "^3.13.0",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
