--- a/package.json
+++ b/package.json
@@ -116,5 +116,11 @@
   "engines": {
     "pnpm": ">=10.0.0",
     "node": ">=18.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "prisma"
+    ]
   }
 }
