chore: push updates for project-nexus

--- a/package.json
+++ b/package.json
@@ -93,20 +93,23 @@
     "rss-parser": "^3.13.0",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
+    "webdav": "^5.4.0",
     "zod": "^4.1.13",
-    "zustand": "^4.5.5",
-    "webdav": "^5.4.0"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.57.0",
     "@types/dagre": "^0.7.53",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.8",
+    "fs-extra": "^11.3.3",
     "only-allow": "^1.2.2",
     "postcss": "^8.4.38",
     "prisma": "^6.16.3",
