--- a/linuxdo-scraper/requirements.txt
+++ b/linuxdo-scraper/requirements.txt
@@ -1,6 +1,5 @@
 # Core dependencies
-playwright==1.40.0
-playwright-stealth==1.0.6
+drissionpage==4.1.0.17
 requests==2.32.5
 python-dotenv==1.1.1
 asyncpg==0.29.0
