--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "prisma generate",
     "dev": "node scripts/start-dev.mjs",
     "build": "node node_modules/next/dist/bin/next build",
     "start": "next start",
